--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,12 @@
-# url for Pipeline on docker: 172.18.0.4 When running app from windows: localhost
 spring.datasource.url= jdbc:postgresql://localhost:5432/tieto-test
 
 # url property specific to environment
 spring.datasource.username= postgres
-spring.datasource.password= SakaLaka1
+spring.datasource.password= password
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
-# Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto= update
 
 spring.main.allow-circular-references=true
